<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.pbn.beers.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_personal_color"
        android:name="com.pbn.beers.ui.personalColor.PersonalColorFragment"
        android:label="@string/title_personal_color"
        tools:layout="@layout/fragment_personal_color" />

    <fragment
        android:id="@+id/navigation_member_center"
        android:name="com.pbn.beers.ui.memberCenter.MemberCenterFragment"
        android:label="@string/title_member_center"
        tools:layout="@layout/fragment_member_center" />
</navigation>